# creature_3d_studio

./: .gitignore  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
crates/studio_core/: Cargo.toml  README.md
crates/studio_core/src/: benchmark.rs  character_controller.rs  chunk_streaming.rs  creature_script.rs  day_night.rs  debug_screenshot.rs  lib.rs  orbit_camera.rs  physics_math.rs  scene_utils.rs  screenshot.rs  screenshot_sequence.rs  sky_sphere.rs  voxel.rs  voxel_collision.rs  voxel_collision_gpu.rs  voxel_fragment.rs  voxel_layer.rs  voxel_mesh.rs  voxel_physics.rs  voxel_physics_world.rs  voxel_world_plugin.rs  world_io.rs
crates/studio_core/src/deferred/: bloom.rs  bloom_node.rs  collision_extract.rs  collision_node.rs  collision_prepare.rs  collision_readback.rs  extract.rs  gbuffer.rs  gbuffer_geometry.rs  gbuffer_material.rs  gbuffer_node.rs  gtao.rs  gtao_denoise.rs  gtao_depth_prefilter.rs  gtao_node.rs  labels.rs  lighting.rs  lighting_node.rs  mod.rs  plugin.rs  point_light.rs  point_light_shadow.rs  point_light_shadow_node.rs  prepare.rs  shadow.rs  shadow_node.rs  sky_dome.rs  sky_dome_node.rs  ssao.rs  ssao_node.rs
crates/studio_core/src/map_editor/: app.rs  checkerboard.rs  hot_reload.rs  imgui_screenshot.rs  lua_generator.rs  lua_layer_registry.rs  lua_materials.rs  lua_renderer.rs  lua_visualizer.rs  material.rs  mcp_server.rs  mod.rs  playback.rs  voxel_buffer.rs  voxel_buffer_2d.rs
crates/studio_core/src/map_editor/asset/: database.rs  embedding.rs  import.rs  mod.rs  store.rs  watcher.rs
crates/studio_core/src/map_editor/generator/: fill.rs  markov.rs  mod.rs  parallel.rs  scatter.rs  sequential.rs  traits.rs
crates/studio_core/src/map_editor/render/: base.rs  frame_capture.rs  lua_layer.rs  mod.rs  pixel_buffer.rs  surface.rs  visualizer.rs
crates/studio_core/src/map_editor/ui/: asset_browser.rs  mod.rs
crates/studio_core/src/markov_junior/: all_node.rs  convchain_node.rs  convolution_node.rs  field.rs  grid_ops.rs  grid_view.rs  helper.rs  interpreter.rs  loader.rs  lua_api.rs  map_node.rs  mod.rs  model.rs  node.rs  node_tests.rs  observation.rs  one_node.rs  parallel_node.rs  path_node.rs  polar_grid.rs  render.rs  rng.rs  rule.rs  rule_node.rs  search.rs  spherical_grid.rs  symmetry.rs  verification.rs  voxel_bridge.rs  write_target.rs
crates/studio_core/src/markov_junior/recording/: archive.rs  grid_type.rs  mod.rs  recorder.rs  tests.rs  traits.rs  video.rs
crates/studio_core/src/markov_junior/wfc/: mod.rs  overlap_node.rs  tile_node.rs  wave.rs  wfc_node.rs
docs/: ARCHITECTURE.md  BEVY_SHADER_EXAMPLES_ANALYSIS.md  CHUNK_SHADOW_STREAKS_DEBUG.md  CONTINUATION_SKY_RENDERING.md  DAY_NIGHT_CYCLE_PHASES.md  DAY_NIGHT_CYCLE_PLAN.md  DEBUG_SKY_CLOUDS.md  DEVELOPMENT.md  EXAMPLE_AUDIT.md  GPU_COLLISION_DEFICIENCIES.md  GPU_COLLISION_INTEGRATION_PLAN.md  GPU_PHYSICS_INTEGRATION_PLAN.md  GREEDY_MESH_AO_BUG.md  GTAO.md  GTAO_DEBUG_PLAN.md  GTAO_IMPLEMENTATION_PLAN.md  GTAO_SESSION_CHEATSHEET.md  GTAO_VERIFICATION.md  HANDOFF_VISUAL_FIDELITY.md  HOW_WE_WORK.md  KINEMATIC_CONTROLLER_REFACTOR.md  KNOWN_ISSUES.md  PHYSICS_AUDIT_PLAN.md  POINT_LIGHT_DEBUG.md  POINT_LIGHT_SHADOW_DEBUG.md  RENDERING_DEBUG.md  SHADOW_BANDING_DEBUG.md  SSAO_INVESTIGATION_PLAN.md  UNIFIED_KINEMATIC_COLLISION_PLAN.md  UNIFIED_PHYSICS_HANDOFF.md  UNIFIED_PHYSICS_PLAN.md  UNIFIED_PHYSICS_REFACTOR_PLAN.md  VOXEL_COLLISION_SYSTEM_PLAN.md  VOXEL_PHYSICS_PLAN.md  WRITING_MILESTONES.md  (+8 more)
(+388 files in other folders)
