[package]
name = "studio_core"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true, features = ["bevy_render", "bevy_core_pipeline", "bevy_pbr"] }
bevy_mesh = "0.17"
bytemuck = { version = "1.14", features = ["derive"] }
mlua.workspace = true
wgpu = "26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

[dev-dependencies]
tempfile = "3.10"
