[package]
name = "studio_core"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true, features = ["bevy_render", "bevy_core_pipeline", "bevy_pbr"] }
bevy_mesh = "0.17"
bevy_mod_imgui.workspace = true
imgui = "0.12"
async-channel = "2.3.0"
bytemuck = { version = "1.14", features = ["derive"] }
mlua.workspace = true
wgpu = "26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rand = "0.8"
clr_random = "0.1"
rand_core = "0.9"
bevy_rapier3d = { version = "0.32", features = ["debug-render-3d"] }
quick-xml = "0.37"
image = { version = "0.25", default-features = false, features = ["png"] }
notify = "6"
tiny_http = "0.12"
urlencoding = "2.1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"

# Semantic search / embeddings (M12)
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
tokenizers = "0.21"
hf-hub = "0.4"

[dev-dependencies]
tempfile = "3.10"
